--- a/www/assets/src/scss/partials/_variables.scss
+++ b/www/assets/src/scss/partials/_variables.scss
@@ -10,7 +10,7 @@ $grey: #b7b7ad;
 $white: #fff;
 $black: #000;
 
-::root {
+:root {
   --primary:       #{$pastel-green};
   --secondary:     #{$beige};
   --tertiary:      #{$orange};
