add style for login and register pages

--- a/www/assets/src/scss/main.scss
+++ b/www/assets/src/scss/main.scss
@@ -5,6 +5,7 @@
 @import "components/header";
 @import "components/home";
 @import "components/navbar";
+@import "components/login";
 
 @import "partials/fonts";
 @import "partials/functions";
