--- a/www/assets/src/scss/main.scss
+++ b/www/assets/src/scss/main.scss
@@ -6,6 +6,8 @@
 @import "components/home";
 @import "components/navbar";
 @import "components/login";
+@import "components/table";
+@import "components/form";
 
 @import "partials/fonts";
 @import "partials/functions";
