--- a/www/assets/src/scss/main.scss
+++ b/www/assets/src/scss/main.scss
@@ -11,6 +11,7 @@
 @import "components/backoffice";
 @import "components/card";
 @import "components/modals";
+@import "components/tooltip";
 
 @import "partials/fonts";
 @import "partials/functions";
