create design guide

--- a/www/assets/src/scss/main.scss
+++ b/www/assets/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import "components/login";
 @import "components/table";
 @import "components/form";
+@import "components/design-guide";
 
 @import "partials/fonts";
 @import "partials/functions";
