--- a/www/assets/src/scss/main.scss
+++ b/www/assets/src/scss/main.scss
@@ -9,6 +9,8 @@
 @import "components/table";
 @import "components/form";
 @import "components/design-guide";
+@import "components/herobanner";
+@import "components/aboutus";
 
 @import "partials/fonts";
 @import "partials/functions";
