color text changed

--- a/www/assets/src/scss/components/_header.scss
+++ b/www/assets/src/scss/components/_header.scss
@@ -33,7 +33,7 @@
 
 .navbar {
   background-color: var(--tertiary);
-  color: var(--black);
+  color: var(--grey);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -57,7 +57,7 @@
 }
 
 .navbar-menu a {
-  color: var(--black);
+  color: var(--dark-green);
   text-decoration: none;
   margin-left: 10px;
 }
