--- a/www/assets/src/scss/components/_header.scss
+++ b/www/assets/src/scss/components/_header.scss
@@ -19,12 +19,45 @@
 }
 
 .back header {
-  flex-basis: 200px; /* Adjust the width as needed */
+  flex-basis: 200px;
+  /* Adjust the width as needed */
   background-color: var(--primary);
 }
 
 .back main {
   flex-grow: 1;
   padding: 20px;
-  background-color: var(--secondary); /* Add a background color for visual clarity */
+  background-color: var(--secondary);
+  /* Add a background color for visual clarity */
+}
+
+.navbar {
+  background-color: var(--tertiary);
+  color: var(--grey);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.navbar-logo {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-logo img {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+
+.navbar-menu {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-menu a {
+  color: var(--dark-green);
+  text-decoration: none;
+  margin-left: 10px;
 }
